--- a/config/database.yml
+++ b/config/database.yml
@@ -51,4 +51,5 @@ production:
   <<: *default
   database: freemarket_sample_66h_production
   username: root
+  password:  Rails.application.credentials[:db][:DATABASE_PASS] 
   socket: /var/lib/mysql/mysql.sock
